--- a/hyprland-laptop-dell.conf
+++ b/hyprland-laptop-dell.conf
@@ -12,3 +12,5 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = NIXOS_OZONE_WL,1
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
+env = GTK_THEME,Nordic
+env = GBM_BACKEND,nvidia-drm
