feat: custom hostname for each workstation

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -93,6 +93,7 @@ gestures {
 
 misc {
     disable_hyprland_logo = true
+    focus_on_activate = true
 }
 
 # Example windowrule v1
@@ -159,3 +160,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod_SHIFT, S, exec, swaylock --image ~/.nixos/lock.png & systemctl suspend
+
+exec-once=[workspace 1 silent] firefox
+exec-once=[workspace 2 silent] emacs
+exec-once=[workspace 5 silent] slack
