feat: updates all around, mold linker

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -11,6 +11,7 @@ source = ~/.config/hypr/hardware.conf
 
 # Execute your favorite apps at launch
 exec-once = waybar & swww init && swww img ~/.nixos/background.png
+exec-once = lxqt-policykit-agent
 
 # toolkit-specific scale
 
@@ -109,7 +110,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod_SHIFT, Q, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod_SHIFT, M, exit,
 bind = $mainMod, F, exec, thunar
 bind = $mainMod_SHIFT, Space, togglefloating,
 bind = $mainMod, Space, exec, tofi-drun --drun-launch=true
