feat: upgrade to latest hyprland, fixup mouse cursor

--- a/hyprland-home-pc.conf
+++ b/hyprland-home-pc.conf
@@ -6,9 +6,11 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
-env = NIXOS_OZONE_WL,1
-env = WLR_RENDERER,vulkan
+env = NVD_BACKEND,direct
+
+cursor {
+    no_hardware_cursors = true
+}
 
 workspace=1,monitor:HDMI-A-1
 workspace=2,monitor:HDMI-A-1
