--- a/hyprland.conf
+++ b/hyprland.conf
@@ -12,6 +12,10 @@ source = ~/.config/hypr/hardware.conf
 # Execute your favorite apps at launch
 exec-once = waybar & swww init && swww img ~/.nixos/background.png
 exec-once = lxqt-policykit-agent
+exec-once = swayidle -w timeout 300 'swaylock -f -c 000000 --image ~/.nixos/lock.png' before-sleep 'swaylock -f -c 000000 --image ~/.nixos/lock.png'
+exec-once = dunst
+exec = hyprctl setcursor Nordzy-cursors 24
+
 
 # toolkit-specific scale
 
@@ -20,6 +24,7 @@ exec-once = lxqt-policykit-agent
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Nordzy-cursors
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -56,9 +61,9 @@ decoration {
     # blur = yes
     # blur_size = 3
     # blur_passes = 1
-    # blur_new_optimizations = on 
+    # blur_new_optimizations = on
 
-    drop_shadow = no    
+    drop_shadow = no
 }
 
 animations {
@@ -80,11 +85,6 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
@@ -109,7 +109,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, alacritty
-bind = $mainMod_SHIFT, Q, killactive, 
+bind = $mainMod_SHIFT, Q, killactive,
 bind = $mainMod_SHIFT, M, exit,
 bind = $mainMod, F, exec, thunar
 bind = $mainMod_SHIFT, Space, togglefloating,
@@ -160,7 +160,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = $mainMod_SHIFT, S, exec, swaylock --image ~/.nixos/lock.png & systemctl suspend
+bind = $mainMod_SHIFT, S, exec, wlogout
 
 exec-once=[workspace 1 silent] firefox
 exec-once=[workspace 2 silent] emacs
