--- a/hyprland.conf
+++ b/hyprland.conf
@@ -25,6 +25,8 @@ exec = hyprctl setcursor Nordzy-cursors 24
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Nordzy-cursors
+env = HYPRCURSOR_THEME,Nordzy-cursors
+env = HYPRCURSOR_SIZE,24
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
