feat: add claude + copilot + lldb

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -44,6 +44,10 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+cursor {
+    no_hardware_cursors = true
+}
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -115,7 +119,7 @@ bind = $mainMod_SHIFT, Q, killactive,
 bind = $mainMod_SHIFT, M, exit,
 bind = $mainMod, F, exec, thunar
 bind = $mainMod_SHIFT, Space, togglefloating,
-bind = $mainMod, Space, exec, tofi-drun --drun-launch=true
+bind = $mainMod, Space, exec, tofi-run | xargs hyprctl dispatch -- exec
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
