--- a/hyprland-home-pc.conf
+++ b/hyprland-home-pc.conf
@@ -1,5 +1,5 @@
 monitor=HDMI-A-1, 2560x1440@60, 0x0, 1, vrr, 2
-monitor=DP-1, 3840x2160, 2560x0, 1.5, transform, 1
+monitor=DP-2, 3840x2160, 0x0, 1.5
 # monitor=,preferred,auto,1
 
 env = LIBVA_DRIVER_NAME,nvidia
@@ -7,10 +7,8 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
-
-cursor {
-    no_hardware_cursors = true
-}
+env = NIXOS_OZONE_WL,1
+env = GTK_THEME,Nordic
 
 workspace=1,monitor:HDMI-A-1
 workspace=2,monitor:HDMI-A-1
