--- a/hyprland-home-pc.conf
+++ b/hyprland-home-pc.conf
@@ -1,5 +1,5 @@
 monitor=HDMI-A-1, 2560x1440@60, 0x0, 1, vrr, 2
-monitor=DP-2, 3840x2160, 0x0, 1.5
+monitor=DP-2, 3840x2160, 2560x0, 1.5, transform, 1
 # monitor=,preferred,auto,1
 
 env = LIBVA_DRIVER_NAME,nvidia
@@ -12,4 +12,4 @@ env = GTK_THEME,Nordic
 
 workspace=1,monitor:HDMI-A-1
 workspace=2,monitor:HDMI-A-1
-workspace=5,monitor:DP-1
+workspace=5,monitor:DP-2
