--- a/hyprland.conf
+++ b/hyprland.conf
@@ -10,31 +10,17 @@ source = ~/.config/hypr/hardware.conf
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & swww init && swww img ~/.nixos/background.png
-exec-once = lxqt-policykit-agent
-exec-once = swayidle -w timeout 300 'swaylock -f -c 000000 --image ~/.nixos/lock.png' before-sleep 'swaylock -f -c 000000 --image ~/.nixos/lock.png'
-exec-once = dunst
-exec = hyprctl setcursor Nordzy-cursors 24
+exec-once = uwsm app -- waybar
+exec-once = uwsm app -- swww init && uswm app -- swww img ~/.nixos/background.png
+exec-once = uwsm app -- lxqt-policykit-agent
+exec-once = uwsm app -- swayidle -w timeout 300 'swaylock -f -c 000000 --image ~/.nixos/lock.png' before-sleep 'swaylock -f -c 000000 --image ~/.nixos/lock.png'
+exec-once = uwsm app -- dunst
+exec-once = uwsm app -- wl-paste --watch cliphist store
+# exec = hyprctl setcursor Nordzy-cursors 24
 
 
-# toolkit-specific scale
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# Some default env vars.
-env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,Nordzy-cursors
-env = HYPRCURSOR_THEME,Nordzy-cursors
-env = HYPRCURSOR_SIZE,24
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options = ctrl:nocaps
-    kb_rules =
-
     follow_mouse = 1
 
     touchpad {
@@ -42,6 +28,12 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+    kb_layout = us
+    kb_variant =
+    kb_model =
+    kb_options = ctrl:nocaps
+    kb_rules =
 }
 
 cursor {
@@ -67,9 +59,7 @@ decoration {
     # blur = yes
     # blur_size = 3
     # blur_passes = 1
-    # blur_new_optimizations = on
-
-    drop_shadow = no
+    # blur_new_optimizations = on    
 }
 
 animations {
@@ -120,6 +110,7 @@ bind = $mainMod_SHIFT, M, exit,
 bind = $mainMod, F, exec, thunar
 bind = $mainMod_SHIFT, Space, togglefloating,
 bind = $mainMod, Space, exec, tofi-run | xargs hyprctl dispatch -- exec
+bind = $mainMod, Y, exec, cliphist list | tofi | cliphist decode | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
